# srted

./: .gitmodules  CMakeLists.txt  README.md
examples/: example_utf8.srt  example_utf8_out.srt  gui_config  outfile.srt  simple.srt
src/: common.h  mynuklear.h  srt.c  srt.h  srted-gui.c  srted.c  sub.c  sub.h  sub_list.c  sub_list.h  time.c  time.h
src/gui/: editor_ctx.c  editor_ctx.h
